# ariel-os-hello

./: Cargo.toml  README.md  laze-project.yml  rust-toolchain  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
