[package]
name = "ariel-os-hello"
version = "0.1.0"
edition = "2021"

[dependencies]
# ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = [] }
ariel-os = { path = "../ariel-os/src/ariel-os", features = [] }
# ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards" }
ariel-os-boards = { path = "../ariel-os/src/ariel-os-boards" }
